tests/e2e/semantics/dot_index_object.story
when http server listen path: "/" as r
    a = server.data["foobar"]
